--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   },
   "homepage": "https://github.com/jkang1220/react-redux-starter#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "knex": "^0.14.6",
+    "mongodb": "^3.0.7",
+    "mongoose": "^5.0.16",
     "pg": "^7.4.1",
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   },
